przed usunieciem gita

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=D:\Ewa Skórska\icons_downloaded\MSRCPSPico.ico,0
+IconResource=D:\icons_downloaded\MSRCPSPico.ico,0
 [ViewState]
 Mode=
 Vid=
